Time: 1 ms (87.16%), Space: 45.4 MB (63.17%) - LeetHub